<resources>
    <string name="app_name">Sys App</string>
    <string name="hint_email">E - mail</string>
    <string name="hint_password">Password</string>
    <string name="txt_login">Already have an account? Login!</string>
    <string name="txt_signup">Sign Up</string>
    <string name="profile_top">Tap on camera to choose profile picture</string>
    <string name="hint_profile">Enter display name</string>
    <string name="profile_img">Imagem de perfil</string>
    <string name="txt_save">Save</string>
    <string name="btn_login">Login</string>
    <string name="txt_profile_verified">Email Verified</string>
    <string name="txt_menu_logout">Logout</string>
    <string name="txt_rotate">Rotate</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_profile_temp">Your name</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_if_verify">Email Verified</string>
    <string name="txt_if_not_verify">Email Not Verified (Click to Verify)</string>
    <string name="toast_select_photo">Select your Profile Photo</string>
    <string name="error_name_required">Name required</string>
    <string name="btn_create_note">Save Note</string>
    <string name="type_your_title_here">Type your title here...</string>
    <string name="type_your_description_here">Type your description here...</string>
    <string name="new_note">New Note</string>
    <string name="notes">Notes</string>
    <string name="calc">Calc</string>
    <string name="features">Features</string>
    <string name="editar_nota">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="title_activity_teste">testeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="for_delete_your_profile_confirm_your_password">For delete your profile, confirm your password!</string>
    <string name="delete_account">Delete Account</string>
    <string name="cpf">CPF</string>
    <string name="tel">Tel</string>
    <string name="name">Name</string>
</resources>
