<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".feature.notes.NewNoteActivity">

    <EditText
        android:id="@+id/txtNoteContent"
        android:layout_width="365dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/type_your_description_here"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/color_default"
        android:textColorHint="@color/color_default"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoteTitle" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_dafault_designe"
        android:onClick="createNote"
        android:text="@string/btn_create_note"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtNoteTitle"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/type_your_title_here"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/color_default"
        android:textColorHint="@color/color_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>