<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:ignore="NamespaceTypo">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.notes.DetailsNoteActivity">

        <LinearLayout
            android:id="@+id/linearLayoutDetailsNote"
            android:layout_width="0dp"
            android:layout_height="493dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnCreate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26">

            <TextView
                android:id="@+id/txtNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/type_your_title_here"
                android:padding="10dp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:alpha=".3"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/txtNoteContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/type_your_description_here"
                android:padding="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="112dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/color_default"
            android:elevation="10dp"
            android:onClick="editNote"
            android:text="@string/editar_nota"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="112dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorDelete"
            android:elevation="10dp"
            android:onClick="deleteNote"
            android:text="@string/delete_note"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>