<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:ignore="NamespaceTypo">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".authentication.LoginActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="339dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btn_login"
            android:textColor="@color/color_default"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:layout_width="339dp"
            android:layout_height="418dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_layout"
            app:cardCornerRadius="5dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/color_default"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:gravity="left"
                    android:hint="@string/hint_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/color_default"
                    android:textColorHint="@color/color_default"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toTopOf="@+id/txtPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    android:autofillHints="@string/hint_password"
                    android:backgroundTint="@color/color_default"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:gravity="left"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword|textNoSuggestions"
                    android:textColor="@color/color_default"
                    android:textColorHint="@color/color_default"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="251dp"
                    android:layout_height="43dp"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="64dp"
                    android:background="@drawable/button_dafault_designe"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/btn_login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.507"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="134dp"
                    android:layout_height="33dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="72dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border_layout"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/txt_signup"
                    android:textColor="@color/color_default"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                    app:layout_constraintVertical_bias="0.105" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>